Event APIs added

--- a/appsettings.json
+++ b/appsettings.json
@@ -13,6 +13,7 @@
     "AddressCollectionName": "Addresses",
     "OccupationsCollectionName": "Occupations",
     "EventsCollectionName": "Events",
+    "FeedbacksCollectionName": "Feedbacks",
     "LoginCredentialsCollectionName": "Credentials",
     "SessionsCollectionName": "Sessions"
   }
